keep track of battles and restored several network commands